[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Traps/Turret/LaserBeam.gd" type="Script" id=1]
[ext_resource path="res://assets/art/traps/Turret/particle.png" type="Texture" id=2]
[ext_resource path="res://assets/art/traps/Turret/particleSmall.png" type="Texture" id=3]
[ext_resource path="res://src/Traps/Trap.gd" type="Script" id=4]

[sub_resource type="CanvasItemMaterial" id=1]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00332226, 0.677741, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.203704, 1 ), -0.0497548, -0.0497548, 0, 0, Vector2( 0.496914, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 125.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=8]

[sub_resource type="ParticlesMaterial" id=9]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Laser" type="RayCast2D"]
modulate = Color( 1, 0, 0, 1 )
cast_to = Vector2( 1000, 0 )
collision_mask = 17
collide_with_areas = true
script = ExtResource( 1 )

[node name="Line" type="Line2D" parent="."]
material = SubResource( 1 )
points = PoolVector2Array( 0, 0, 1, 0 )
default_color = Color( 0.929412, 0.929412, 0.929412, 1 )
begin_cap_mode = 2
end_cap_mode = 2

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Trap" type="Area2D" parent="CollisionParticle"]
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionParticle/Trap"]
shape = SubResource( 8 )

[node name="BeamParticle" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 3 )
[connection signal="body_entered" from="CollisionParticle/Trap" to="CollisionParticle/Trap" method="playerHitTrap"]
